Changed the theme color and Logo Icon

--- a/app/design/adminhtml/default/default/locale/en_US/translate.csv
+++ b/app/design/adminhtml/default/default/locale/en_US/translate.csv
@@ -2,7 +2,7 @@
 "Add New User","Add New User"
 "Items that you don","Items that you don"
 "State/Province","State/Province"
-"Magento Commerce - Administrative Panel","Magento Commerce - Administrative Panel"
+"Darpae - Administrative Panel","Darpae - Administrative Panel"
 "3 stars","3 stars"
 "Credit Memo Date","Credit Memo Date"
 "Double click on a group to rename it","Double click on a group to rename it"
