--- a/app/locale/de_DE/Mage_Adminhtml.csv
+++ b/app/locale/de_DE/Mage_Adminhtml.csv
@@ -517,7 +517,7 @@
 "MINOR","KLEINER"
 "MS Excel XML","MS Excel XML"
 "Magento Admin","Magento Admin"
-"Magento Commerce - Administrative Panel","Magento Commerce - Verwaltungspanel"
+"Darpae - Administrative Panel","Darpae - Verwaltungspanel"
 "Magento Connect","Magento Connect"
 "Magento Connect Manager","Magento Connect-Manager"
 "Magento Logo","Magento-Logo"
