--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -558,7 +558,7 @@
 "MINOR","MINOR"
 "MS Excel XML","MS Excel XML"
 "Magento Admin","Magento Admin"
-"Magento Commerce - Administrative Panel","Magento Commerce - Administrative Panel"
+"Darpae - Administrative Panel","Darpae - Administrative Panel"
 "Magento Connect","Magento Connect"
 "Magento Connect Manager","Magento Connect Manager"
 "Magento Logo","Magento Logo"
